--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -9,5 +9,5 @@
 </div>
 
 <div class="container map-detail" style="margin-top: 50px;" ng-if="!allPostAnimal">
-	<h2>Khong co du lieu</h2>
+	<h2>Không có dữ liệu!</h2>
 </div>
