--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -34,6 +34,7 @@ body {
     border-radius: 4px;
     margin: 5px;
     width: 300px;
+    border: 1px solid #ccc;
 }
 
 .h3-title{
@@ -42,6 +43,7 @@ body {
 
 .select-box{
     padding: 5px;
+    margin: 5px 0px;
     border-radius: 4px;
     width: 300px;
 }
@@ -120,7 +122,14 @@ a.nav:hover{
     color: #000;
 }
 /*------------------END-NAVBAR---------------------*/
-
+/*------------------FORM_DATA---------------------*/
+.has-error{
+    border-color: #a94442;
+}
+.text-errors{
+    color: red;
+}
+/*------------------END-FORM_DATA---------------------*/
 
 
 @media screen and (max-width : 992px){
