--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -192,7 +192,7 @@
 						<td>Quốc gia (*): </td>
 						<td>
 							<select class="select-box" name="quocGia" ng-class="{'has-error' : FormAnimal.quocGia.$error.required && FormAnimal.quocGia.$touched}" required>
-								<option value="VietNam">Việt Nam</option>
+								<option value="Việt Nam">Việt Nam</option>
 							</select>
 							<span class="text-errors" ng-show="(FormAnimal.quocGia.$submitted || FormAnimal.quocGia.$touched) && FormAnimal.quocGia.$error.required">Required!</span>
 						</td>
