--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -445,7 +445,7 @@
 			</tr>
 		</table>
 	</form>
-	<button type="submit" ng-click="updatePost()" class="btn btn-success btn-lg">Thêm dữ liệu</button>
+	<button type="submit" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button>
 </div>
 
 <div class="container map-detail" style="margin-top: 50px;" ng-if="status == 'error'">
