--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,9 +13,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 			
-				<div class="col-sm-12">
-					<h1>Đăng nhập</h1>
-				</div>
+				
 				<div class="col-sm-12">
 					<form class="form" name="form" method="post" onsubmit="handleSubmit()">
 						<div class="row">
@@ -28,7 +26,7 @@
 						</div>
 						<div class="row">
 							<!-- <button class="btn btn-inverse btn-lg btn-login" type="button" onclick="handleSubmit()">Login</button> -->
-							<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Đăng nhập</button>
+							<button class="btn btn-inverse btn-lg btn-login" style="margin-top:10px" type="submit" id="btnSubmit">Đăng nhập</button>
 						</div>
 						<hr>
 						<% if (message) { %>
