--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -13,7 +13,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 col-lg-offset-3 col-md-offset-2">
-					<h1>Đăng ký tài khoản</h1>
+					
 					<div class="container-fluid">
 						<form class="form" name="form" method="post" onsubmit="handleRegister()">
 							<div class="row" >
@@ -26,7 +26,7 @@
 								<label>Mật khẩu</label><input type="password" name="password" id="password" class="form-control">
 							</div>
 							<div class="row">
-								<button class="btn btn-inverse btn-lg btn-login" type="submit" id="btnSubmit">Đăng ký</button>
+								<button class="btn btn-inverse btn-lg btn-login" style="margin-top:10px" type="submit" id="btnSubmit">Đăng ký</button>
 							</div>
 							<hr>
 							<% if (message) { %>
