Display files + prop name

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -226,7 +226,7 @@
 					</tr>
 					<tr>
 						<td>Thôn/Xóm: </td>
-						<td><input type="text" name="thon" class="input-form"></td>
+						<td><input type="text" name="thon" id="thon" class="input-form"></td>
 					</tr>
 				</table>
 				</td>
