--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -10,7 +10,7 @@
 						<p><b>Id: </b><a style="text-decoration: none" href="/content/dong-vat/{{post._id}}?display=html"><span class="label label-info">{{post._id}}</span></a></p>
 						<p><b>Người thu mẫu: </b>{{post.duLieuThuMau.nguoiThuMau}}</p>
 						<p><b>Tên mẫu: </b>{{post.tenMau.tenVietNam}}</p>
-						<p><b>Ngày đăng: </b>{{post.created_at}}</p>
+						<p><b>Ngày đăng: </b>{{post.created_at | date: "dd-MM-yyyy hh:mm:ss"}}</p>
 					</td>
 					<td style="right: 0px; position: absolute;">
 						<a class="btn btn-success" href="#!/dong-vat/chinh-sua/{{post._id}}" role="button">Chỉnh sửa</a>
