--- a/views/log.ejs
+++ b/views/log.ejs
@@ -54,10 +54,13 @@
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 									<% if (action == 'create') { %>
 										<a href="<%= path + '?action=create' %>"><h4>Tạo mới</h4></a>
+										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><h5>(<%= logs[i].obj1._id %>)</h5></a>
 									<% } else if (action == 'update') { %>
 										<a href="<%= path + '?action=update' %>"><h4>Cập nhật</h4></a>
+										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><h5>(<%= logs[i].obj1._id %>)</h5></a>
 									<% } else if (action == 'delete') { %>
 										<a href="<%= path + '?action=delete' %>"><h4>Xóa</h4></a>
+										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><h5>(<%= logs[i].obj1._id %>)</h5></a>
 									<% } %>
 								</div>
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
