fix properties of some form

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -90,7 +90,7 @@
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoigianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau"  class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
@@ -250,7 +250,7 @@
 			</tr>
 			<tr>
 				<td><label>Ảnh mẫu sau chế tác:</label></td>
-				<td><input type="text" name="anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
+				<td><input type="file" name="anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
 			</tr>
 		</table>
 		<table>
