--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -81,7 +81,7 @@
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoigianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau"  class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
@@ -146,6 +146,10 @@
 			<tr>
 				<td><label>Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
 				<td><input type="text" maxlength="250" name="thongTinDuAn"  class="input-form" required></td>
+			</tr>
+			<tr>
+				<td><label>Mẫu chất ở vị trí thu mẫu (*):</label></td>
+				<td><input type="text" maxlength="150" name="mauChatOViTriThuMau"  class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Độ cao (*): </label></td>
