--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -1,6 +1,6 @@
 <div class="container map-detail" style="margin-top: 50px;">
 	<form id="form-animal">
-		<center><h2>Cơ sở dữ liệu thực vật</h2></center>
+		<center><h2>Thêm mẫu dữ liệu thực vật</h2></center>
 		<table>
 			<h3 class="h3-title">1. Số hiệu</h3>
 			<tr>
@@ -143,7 +143,7 @@
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoigianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau"  class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
@@ -310,7 +310,7 @@
 			</tr>
 			<tr>
 				<td><label>Ảnh mẫu sau chế tác:</label></td>
-				<td><input type="text" name="anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
+				<td><input type="file" name="anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
 			</tr>
 			<tr><td colspan="2"><h4>Thông tin DNA</h4></td></tr>
 			<tr>
