--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -1,5 +1,5 @@
 <div class="container map-detail" style="margin-top: 50px;" ng-if="status == 'success'">
-	<form id="form-animal" name="FormAnimal">
+	<form id="form-content" name="FormAnimal">
 		<input type="text" name="animalId" style="display: none;" ng-model="animal.animalId">
 		<center><h2>Chỉnh sửa mẫu dữ liệu động vật</h2></center>
 		<table>
