--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -1,5 +1,5 @@
 <div class="container map-detail" style="margin-top: 50px;">
-	<form id="form-animal">
+	<form id="form-content">
 		<center><h2>Cơ sở dữ liệu mẫu địa chất</h2></center>
 		<table>
 			<h3 class="h3-title">1. Số hiệu</h3>
