--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -1,5 +1,5 @@
 <div class="container map-detail" style="margin-top: 50px;">
-	<form id="form-animal" name="FormAnimal" ng-submit="addPost(FormAnimal)" novalidate>
+	<form id="form-content" name="FormAnimal" ng-submit="addPost(FormAnimal)" novalidate>
 		<center><h2>Thêm mẫu dữ liệu động vật</h2></center>
 		<table>
 			<h3 class="h3-title">1. Số hiệu</h3>
