--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -1,5 +1,5 @@
 <div class="container map-detail" style="margin-top: 50px;">
-	<form id="form-animal">
+	<form id="form-content">
 		<center><h2>Thêm mẫu dữ liệu cổ sinh</h2></center>
 		<table>
 			<h3 class="h3-title">1. Số hiệu</h3>
@@ -136,7 +136,7 @@
 					<tr>
 						<td>Quốc gia(*): </td>
 						<td>
-							<select class="select-box" ng-model="animal.quocGia"  name="quocGia" required>
+							<select class="select-box" ng-model="quocGia"  name="quocGia" required>
 								<option value="VietNam">Việt Nam</option>
 							</select>
 						</td>
@@ -144,7 +144,7 @@
 					<tr>
 						<td>Tỉnh/Thành phố(*): </td>
 						<td>
-							<select class="select-box" name="tinh" required ng-model= "$parent.animal.tinh" ng-change="cityChange()">
+							<select class="select-box" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
 								<option  ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " +  city.name}}</option>
 							</select>
 						</td>
@@ -152,22 +152,22 @@
 					<tr>
 						<td>Huyện(*):</td>
 						<td>
-							<select class="select-box" name="huyen" required ng-model= "$parent.animal.huyen" ng-change="districtChange()">
-								<option ng-repeat="(key, district) in districts | customCity: animal.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
+							<select class="select-box" name="huyen" required ng-model= "$parent.huyen" ng-change="districtChange()">
+								<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
 							</select>
 						</td>
 					</tr>
 					<tr>
 						<td>Xã(*): </td>
 						<td>
-							<select class="select-box"  ng-model="animal.xa" name="xa" required>
-								<option ng-repeat="(key, ward) in wards | customDistrict: animal.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
+							<select class="select-box"  ng-model="xa" name="xa" required>
+								<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 							</select>
 						</td>
 					</tr>
 					<tr>
 						<td>Thôn/Xóm: </td>
-						<td><input type="text"  ng-model="animal.thon" name="thon" id="thon" class="input-form"></td>
+						<td><input type="text"  ng-model="thon" name="thon" id="thon" class="input-form"></td>
 					</tr>
 				</table>
 				</td>
