--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -200,7 +200,7 @@
 			</tr>
 			<tr>
 				<td><label>Kết quả phân tích (*):</label></td>
-				<td><input type="text" name="ketQuaPhanTich" id="ketQuaPhanTich" accept=".doc, .docx, .pdf" class="input-form" required></td>
+				<td><input type="file" name="ketQuaPhanTich" id="ketQuaPhanTich" accept=".doc, .docx, .pdf" class="input-form" required></td>
 			</tr>
 		</table>
 		<table>
