--- a/views/display.ejs
+++ b/views/display.ejs
@@ -9,8 +9,8 @@
 	<body>
 		<div class="container">
 			<% if (typeof(objectModelId) != 'undefined') { %>
-				<a class="btn btn-success" role="button" href="<%= '/app/#!/dong-vat/chinh-sua/' + objectModelId %>">Chỉnh sửa mẫu dữ liệu này</a>
-				<a class="btn btn-primary" role="button" href="<%= '/app/#!/bai-dang/dong-vat' %>">Đến trang quản lý mẫu</a>
+				<a class="btn btn-success" role="button" href="<%= '/app/#!' + objectPath + '/chinh-sua/' + objectModelId %>">Chỉnh sửa mẫu dữ liệu này</a>
+				<a class="btn btn-primary" role="button" href="<%= '/app/#!/bai-dang' + objectPath %>">Đến trang quản lý mẫu</a>
 			<% } %>
 			<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 				<% 
