--- a/views/log.ejs
+++ b/views/log.ejs
@@ -65,13 +65,27 @@
 								</div>
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 									<% if (logs[i].action == 'create') { %>
-										<a href="/content/dong-vat/log/<%= logs[i]._id + '/1' %>"><h4>Dữ liệu tại thời điểm này</h4></a>
-										<a href="/content/dong-vat/<%= logs[i].obj1._id + '?display=html' %>"><h4>Dữ liệu hiện tại</h4></a>
+										<% 
+											var basePath = '/content/dong-vat';
+											switch (logs[i].objType){
+												case 'animal':
+													basePath = '/content/dong-vat';
+													break;
+												case 'soil':
+													basePath = '/content/tho-nhuong';
+													break;
+												case 'geological':
+													basePath = '/content/dia-chat';
+													break;
+											}
+										%>
+										<a href="<%= basePath %>/log/<%= logs[i]._id + '/1' %>"><h4>Dữ liệu tại thời điểm này</h4></a>
+										<a href="<%= basePath %>/<%= logs[i].obj1._id + '?display=html' %>"><h4>Dữ liệu hiện tại</h4></a>
 									<% } else if (logs[i].action == 'update') { %>
-										<a href="/content/dong-vat/log/<%= logs[i]._id + '/diff' %>"><h4>Xem những cập nhật</h4></a>
-										<a href="/content/dong-vat/<%= logs[i].obj1._id + '?display=html' %>"><h4>Dữ liệu hiện tại</h4></a>
+										<a href="<%= basePath %>/log/<%= logs[i]._id + '/diff' %>"><h4>Xem những cập nhật</h4></a>
+										<a href="<%= basePath %>/<%= logs[i].obj1._id + '?display=html' %>"><h4>Dữ liệu hiện tại</h4></a>
 									<% } else if (logs[i].action == 'delete') { %>
-										<a href="/content/dong-vat/<%= logs[i].obj1._id + '?display=html' %>"><h4>Mẫu dữ liệu bị xóa</h4></a>
+										<a href="<%= basePath %>/<%= logs[i].obj1._id + '?display=html' %>"><h4>Mẫu dữ liệu bị xóa</h4></a>
 									<% } %>
 								</div>
 							</div>
