--- a/views/log.ejs
+++ b/views/log.ejs
@@ -76,19 +76,19 @@
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
 									<% if (action == 'create') { %>
 										<a href="<%= path + '?action=create' %>"><h4>Tạo mới</h4></a> 
-										(<a href="<%= path + '?type=' + objectModelName %>"><span><%= objectModelLabel %></span></a>
-										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><span> - <%= logs[i].obj1._id %></span></a>)
+										(<a href="<%= path + '?type=' + objectModelName %>"><span><%= objectModelLabel %></span></a> -
+										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><span> <%= logs[i].obj1._id %></span></a>)
 									<% } else if (action == 'update') { %>
 										<a href="<%= path + '?action=update' %>"><h4>Cập nhật</h4></a>
-										(<a href="<%= path + '?type=' + objectModelName %>"><span><%= objectModelLabel %></span></a>
+										(<a href="<%= path + '?type=' + objectModelName %>"><span><%= objectModelLabel %></span></a> -
 	
-										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><span> - <%= logs[i].obj1._id %></span></a>)
+										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><span> <%= logs[i].obj1._id %></span></a>)
 									<% } else if (action == 'delete') { %>
-										<a href="<%= path + '?action=delete' %>"><h4>Xóa <%= objectModelLabel %></h4></a>
+										<a href="<%= path + '?action=delete' %>"><h4>Xóa</h4></a>
 										
-										(<a href="<%= path + '?type=' + objectModelName %>"><span><%= objectModelLabel %></span></a>
+										(<a href="<%= path + '?type=' + objectModelName %>"><span><%= objectModelLabel %></span></a> -
 	
-										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><span>(<%= logs[i].obj1._id %>)</span></a>)
+										<a href="<%= path + '?object=' + logs[i].obj1._id %>"><span> <%= logs[i].obj1._id %></span></a>)
 									<% } %>
 								</div>
 								<div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
