Sua mot so the trong form

--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -301,6 +301,10 @@
 				<td><input type="text" name="congBoQuocTe" ng-model="data.congBoQuocTe" class="input-form"></td>
 			</tr>
 			<tr>
+				<td><label>Mô tả/đặc điểm hình thái (*)</label></td>
+				<td><input type="text" name="moTaHinhThai" ng-model="data.moTaHinhThai" class="input-form"></td>
+			</tr>
+			<tr>
 				<td><label>Hình vẽ</label></td>
 				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhVe" class="input-form"></td>
 			</tr>
