--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -300,6 +300,10 @@
 				<td><input type="text" name="congBoQuocTe" class="input-form"></td>
 			</tr>
 			<tr>
+				<td><label>Mô tả/đặc điểm hình thái (*)</label></td>
+				<td><input type="text" name="moTaHinhThai" class="input-form"></td>
+			</tr>
+			<tr>
 				<td><label>Hình vẽ</label></td>
 				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhVe" class="input-form"></td>
 			</tr>
