fix display logs + handle invalid input in type number

--- a/views/log.ejs
+++ b/views/log.ejs
@@ -56,6 +56,16 @@
 									objectModelLabel = 'mẫu địa chất';
 									objectModelName = 'geological';
 									break;
+								case 'paleontological':
+									basePath = '/content/co-sinh';
+									objectModelLabel = 'mẫu cổ sinh';
+									objectModelName = 'paleontological';
+									break;
+								case 'vegetable':
+									basePath = '/content/thuc-vat';
+									objectModelLabel = 'mẫu thực vật';
+									objectModelName = 'vegetable';
+									break;
 							}
 						%>
 						<% if (action == 'create') { %>
