Hoan thanh cac chuc nang co ban

--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -5,15 +5,15 @@
 			<h3 class="h3-title">1. Số hiệu</h3>
 			<tr>
 				<td><label>Số hiệu thực địa (*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuThucDia" class="input-form"  required></td>
+				<td><input type="text" maxlength="100" name="soHieuThucDia" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu bảo tàng cơ sở(*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" class="input-form"  required></td>
+				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu BTTNVN:</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBTTNVN"  class="input-form"></td>
+				<td><input type="text" maxlength="100" name="soHieuBTTNVN" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Mã kí hiệu mẫu vật quốc tế:</label></td>
@@ -22,22 +22,22 @@
 
 			<tr>
 				<td><label>Các kí hiệu mẫu vật khác:</label></td>
-				<td><input type="text" name="kyHieuMauVatKhac"  class="input-form" maxlength="100"  required></td>
+				<td><input type="text" name="kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">2. Tên mẫu</h3>
 			<tr>
 				<td><label>Tên Việt Nam(phổ thông) (*):</label></td>
-				<td><input type="text" name="tenVietNam"  class="input-form" required></td>
+				<td><input type="text" name="tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tên địa phương:</label></td>
-				<td><input type="text" name="tenDiaPhuong"  class="input-form"></td>
+				<td><input type="text" name="tenDiaPhuong" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên Tiếng Anh:</label></td>
-				<td><input type="text" name="tenTiengAnh"  class="input-form"></td>
+				<td><input type="text" name="tenTiengAnh" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên theo hệ thống PL của bảo tàng:</label></td>
@@ -49,28 +49,28 @@
 			</tr>
 			<tr>
 				<td><label>Tên khoa học (tên latin): </label></td>
-				<td><input type="text" name="tenKhoaHoc" class="input-form"  ></td>
+				<td><input type="text" name="tenKhoaHoc" class="input-form" ></td>
 			</tr
 			<tr><td><h4></h4></td></tr>
 			<tr>
 				<td><label>Người định tên: </label></td>
-				<td><input type="text" name="nguoiDinhTen" class="input-form"  ></td>
+				<td><input type="text" name="nguoiDinhTen" class="input-form" ></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">3. Số lượng và chất lượng mẫu vật</h3>
 			<tr>
 				<td><label>Số lượng mẫu vật:</label></td>
-				<td><input type="number" min="0" name="soLuongMauVat"  class="input-form"></td>
+				<td><input type="number" min="0" name="soLuongMauVat" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Số lượng tiêu bản:</label></td>
-				<td><input type="number" min = "0" name="soLuongTieuBan"  class="input-form"></td>
+				<td><input type="number" min = "0" name="soLuongTieuBan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Loại mẫu vật(*):</label></td>
 				<td>
-					<select required name="loaiMau">
+					<select required class="select-box" name="loaiMau">
 						<option>Mẫu nghiên cứu</option>
 						<option>Mẫu trưng bày</option>
 						<option>Mẫu type</option>
@@ -79,22 +79,22 @@
 			</tr>
 			<tr>
 				<td><label>Kích thước mẫu (*):</label></td>
-				<td><input type="text" name="kichThuocMau"  class="input-form" required></td>
+				<td><input type="text" name="kichThuocMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tình trạng mẫu (*):</label></td>
-				<td><input type="text" name="tinhTrangMau"  class="input-form" required></td>
+				<td><input type="text" name="tinhTrangMau" class="input-form" required></td>
 			</tr>		
 		</table>
 		<table>
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoiGianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
-				<td><input type="text" name="nguoiThuMau"  class="input-form" required></td>
+				<td><input type="text" name="nguoiThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan thu mẫu: </label></td>
@@ -107,7 +107,7 @@
 					<tr>
 						<td>Quốc gia(*): </td>
 						<td>
-							<select class="select-box" ng-model="quocGia"  name="quocGia" required>
+							<select class="select-box" ng-model="quocGia" name="quocGia" required>
 								<option value="VietNam">Việt Nam</option>
 							</select>
 						</td>
@@ -116,7 +116,7 @@
 						<td>Tỉnh/Thành phố(*): </td>
 						<td>
 							<select class="select-box" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
-								<option  ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " +  city.name}}</option>
+								<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 							</select>
 						</td>
 					</tr>
@@ -131,14 +131,14 @@
 					<tr>
 						<td>Xã(*): </td>
 						<td>
-							<select class="select-box"  ng-model="xa" name="xa" required>
+							<select class="select-box" ng-model="xa" name="xa" required>
 								<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 							</select>
 						</td>
 					</tr>
 					<tr>
 						<td>Thôn/bản: </td>
-						<td><input type="text"  ng-model="thon" name="thon" id="thon" class="input-form"></td>
+						<td><input type="text" ng-model="thon" name="thon" id="thon" class="input-form"></td>
 					</tr>
 				</table>
 				</td>
@@ -146,37 +146,37 @@
 			<tr><td><h4>Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</h4></td></tr>
 			<tr>
 				<td><label>Vĩ độ N (*): </label></td>
-				<td><input type="text" name="viDo"  class="input-form" required></td>
+				<td><input type="text" name="viDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Kinh độ E (*):</label></td>
-				<td><input type="text" name="kinhDo"  class="input-form" required></td>
+				<td><input type="text" name="kinhDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
-				<td><input type="text" name="thongTinDuAn"  class="input-form" required></td>
+				<td><input type="text" name="thongTinDuAn" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Ghi chép thực địa (*):</label></td>
-				<td><input type="text" name="ghiChepThucDia"  class="input-form"  required></td>
+				<td><input type="text" name="ghiChepThucDia" class="input-form" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">5. NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
 				<td><label>Thời gian phân tích/giám định/định loại mẫu:</label></td>
-				<td><input type="date" name="thoiGianPhanTich"  class="input-form"></td>
+				<td><input type="date" name="thoiGianPhanTich" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người phân tích/giám định/định loại mẫu (*):</label></td>
-				<td><input type="text" name="nguoiPhanTich"  class="input-form" required></td>
+				<td><input type="text" name="nguoiPhanTich" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan/tổ chức phân tích/giám định/phân loại mẫu (*):</label></td>
 				<td><input type="text" name="coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm  (*):</label></td>
+				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
 				<td><input type="file" multiple name="taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" required></td>
 			</tr>
 			<tr>
@@ -186,15 +186,15 @@
 			</tr>
 			<tr>
 				<td><label>Các kết quả phân tích thành phần vật chất:</label></td>
-				<td><input type="file" name="ketQuaThanhPhanVatChat"  class="input-form" accept=".docx, .doc, .pdf" ></td>
+				<td><input type="file" name="ketQuaThanhPhanVatChat" class="input-form" accept=".docx, .doc, .pdf" ></td>
 			</tr>
 			<tr>
 				<td><label>Kết quả phân tích đồng vị và định tuổi:</label></td>
-				<td><input type="file" name="ketQuaPhanTichDongVi"  class="input-form" accept=".docx, .doc, .pdf" ></td>
+				<td><input type="file" name="ketQuaPhanTichDongVi" class="input-form" accept=".docx, .doc, .pdf" ></td>
 			</tr>
 			<tr>
 				<td><label>Các phân tích khác:</label></td>
-				<td><input type="file" name="phanTichKhac"  class="input-form" accept=".docx, .doc, .pdf" ></td>
+				<td><input type="file" name="phanTichKhac" class="input-form" accept=".docx, .doc, .pdf" ></td>
 			</tr>
 			<tr><td colspan="2"><h2>Nhóm dữ liệu địa chất</h2></td></tr>
 			<tr>
@@ -214,7 +214,7 @@
 			</tr>
 			<tr>
 				<td><label>Hình ảnh mẫu ngoài thực địa:</label></td>
-				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia"  class="input-form"></td>
+				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về phim, video:</label></td>
@@ -301,15 +301,15 @@
 			<h3 class="h3-title">8. NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
 				<td><label>Ngày nhập mẫu: </label></td>
-				<td><input type="date" name="ngayNhapMau"  class="input-form"></td>
+				<td><input type="date" name="ngayNhapMau" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người giao mẫu: </label></td>
-				<td><input type="text" name="nguoiGiao"  class="input-form"></td>
+				<td><input type="text" name="nguoiGiao" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người nhận mẫu</label></td>
-				<td><input type="text" name="nguoiNhan"  class="input-form"></td>
+				<td><input type="text" name="nguoiNhan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan nhập mẫu: </label></td>
@@ -374,7 +374,7 @@
 			<h3 class="h3-title">9. NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 			<tr>
 				<td><label>Thông tin khác</label></td>
-				<td><input type="text" name="thongTinKhac"  class="input-form"></td>
+				<td><input type="text" name="thongTinKhac" class="input-form"></td>
 			</tr>
 		</table>
 	</form>
