--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -6,15 +6,15 @@
 			<h3 class="h3-title">1. Số hiệu</h3>
 			<tr>
 				<td><label>Số hiệu thực địa (*):</label></td>
-				<td><input type="text" maxlength="50" name="soHieuThucDia" class="input-form"  required></td>
+				<td><input type="text" maxlength="50" name="soHieuThucDia" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu bảo tàng cơ sở(*):</label></td>
-				<td><input type="text" maxlength="50" name="soHieuBaoTangCS" class="input-form"  required></td>
+				<td><input type="text" maxlength="50" name="soHieuBaoTangCS" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu BTTNVN(*):</label></td>
-				<td><input type="text" maxlength="50" name="soHieuBTTNVN"  class="input-form" required></td>
+				<td><input type="text" maxlength="50" name="soHieuBTTNVN" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Mã kí hiệu mẫu vật quốc tế:</label></td>
@@ -23,22 +23,22 @@
 
 			<tr>
 				<td><label>Các kí hiệu mẫu vật khác:</label></td>
-				<td><input type="text" name="kyHieuMauVatKhac"  class="input-form" maxlength="50"  required></td>
+				<td><input type="text" name="kyHieuMauVatKhac" class="input-form" maxlength="50" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">2. Tên mẫu</h3>
 			<tr>
 				<td><label>Tên Việt Nam(phổ thông) (*):</label></td>
-				<td><input type="text" maxlength="250" name="tenVietNam"  class="input-form" required></td>
+				<td><input type="text" maxlength="250" name="tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tên địa phương:</label></td>
-				<td><input type="text" maxlength="250" name="tenDiaPhuong"  class="input-form"></td>
+				<td><input type="text" maxlength="250" name="tenDiaPhuong" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên Tiếng Anh:</label></td>
-				<td><input type="text" maxlength="250" name="tenTiengAnh"  class="input-form"></td>
+				<td><input type="text" maxlength="250" name="tenTiengAnh" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên theo hệ thống PL của bảo tàng:</label></td>
@@ -53,16 +53,16 @@
 			<h3 class="h3-title">3. Số lượng và chất lượng mẫu vật</h3>
 			<tr>
 				<td><label>Số lượng mẫu vật:</label></td>
-				<td><input type="number" min="0" name="soLuongMauVat"  class="input-form"></td>
+				<td><input type="number" min="0" name="soLuongMauVat" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Số lượng tiêu bản:</label></td>
-				<td><input type="number" min = "0" name="soLuongTieuBan"  class="input-form"></td>
+				<td><input type="number" min = "0" name="soLuongTieuBan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Loại mẫu vật(*):</label></td>
 				<td>
-					<select required name="loaiMau">
+					<select required class="select-box" name="loaiMau">
 						<option>Mẫu nghiên cứu</option>
 						<option>Mẫu trưng bày</option>
 						<option>Mẫu type</option>
@@ -71,18 +71,18 @@
 			</tr>
 			<tr>
 				<td><label>Kích thước mẫu (*):</label></td>
-				<td><input type="text" maxlength="50" name="kichThuocMau"  class="input-form" required></td>
+				<td><input type="text" maxlength="50" name="kichThuocMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tình trạng mẫu (*):</label></td>
-				<td><input type="text" maxlength="100" name="tinhTrangMau"  class="input-form" required></td>
+				<td><input type="text" maxlength="100" name="tinhTrangMau" class="input-form" required></td>
 			</tr>		
 		</table>
 		<table>
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoiGianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
@@ -99,7 +99,7 @@
 					<tr>
 						<td>Quốc gia(*): </td>
 						<td>
-							<select class="select-box" ng-model="quocGia"  name="quocGia" required>
+							<select class="select-box" ng-model="quocGia" name="quocGia" required>
 								<option value="VietNam">Việt Nam</option>
 							</select>
 						</td>
@@ -108,7 +108,7 @@
 						<td>Tỉnh/Thành phố(*): </td>
 						<td>
 							<select class="select-box" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
-								<option  ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " +  city.name}}</option>
+								<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 							</select>
 						</td>
 					</tr>
@@ -123,14 +123,14 @@
 					<tr>
 						<td>Xã(*): </td>
 						<td>
-							<select class="select-box"  ng-model="xa" name="xa" required>
+							<select class="select-box" ng-model="xa" name="xa" required>
 								<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 							</select>
 						</td>
 					</tr>
 					<tr>
 						<td>Thôn/Xóm: </td>
-						<td><input type="text"  ng-model="thon" name="thon" id="thon" class="input-form"></td>
+						<td><input type="text" ng-model="thon" name="thon" id="thon" class="input-form"></td>
 					</tr>
 				</table>
 				</td>
@@ -138,27 +138,27 @@
 			<tr><td><h4>Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</h4></td></tr>
 			<tr>
 				<td><label>Vĩ độ N (*): </label></td>
-				<td><input type="text" name="viDo"  class="input-form" required></td>
+				<td><input type="text" name="viDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Kinh độ E (*):</label></td>
-				<td><input type="text" name="kinhDo"  class="input-form" required></td>
+				<td><input type="text" name="kinhDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
-				<td><input type="text" maxlength="250" name="thongTinDuAn"  class="input-form" required></td>
+				<td><input type="text" maxlength="250" name="thongTinDuAn" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Mẫu chất ở vị trí thu mẫu (*):</label></td>
-				<td><input type="text" maxlength="150" name="mauChatOViTriThuMau"  class="input-form" required></td>
+				<td><input type="text" maxlength="150" name="mauChatOViTriThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Độ cao (*): </label></td>
-				<td><input type="number" min="0" name="doCao"  class="input-form" required ></td>
+				<td><input type="number" min="0" name="doCao" class="input-form" required ></td>
 			</tr>
 			<tr>
 				<td><label>Độ sâu:</label></td>
-				<td><input type="number" name="doSau" min="0"  class="input-form"></td>
+				<td><input type="number" name="doSau" min="0" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Độ dốc nơi thu mẫu (*):</label></td>
@@ -227,7 +227,7 @@
 			</tr>
 			<tr>
 				<td><label>Hình ảnh mẫu ngoài thực địa:</label></td>
-				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia"  class="input-form"></td>
+				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về phim, video:</label></td>
@@ -262,7 +262,7 @@
 		<table>
 			<h3 class="h3-title">8. NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 			<tr>
-				<td colspan="2"><h4>Phân bố địa lý của taxon định loại  (*)</h4></td>
+				<td colspan="2"><h4>Phân bố địa lý của taxon định loại (*)</h4></td>
 			</tr>
 			<tr>
 				<td><label>Phân bố Việt Nam (*):</label></td>
@@ -288,15 +288,15 @@
 			<h3 class="h3-title">9. NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
 				<td><label>Ngày nhập mẫu: </label></td>
-				<td><input type="date" name="ngayNhapMau"  class="input-form"></td>
+				<td><input type="date" name="ngayNhapMau" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người giao mẫu: </label></td>
-				<td><input type="text" maxlength="250" name="nguoiGiao"  class="input-form"></td>
+				<td><input type="text" maxlength="250" name="nguoiGiao" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người nhận mẫu</label></td>
-				<td><input type="text" maxlength="250" name="nguoiNhan"  class="input-form"></td>
+				<td><input type="text" maxlength="250" name="nguoiNhan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan nhập mẫu: </label></td>
