--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -6,15 +6,15 @@
 			<h3 class="h3-title">1. Số hiệu</h3>
 			<tr>
 				<td><label>Số hiệu thực địa (*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form"  required></td>
+				<td><input type="text" maxlength="100" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu bảo tàng cơ sở(*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form"  required></td>
+				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu BTTNVN:</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN"  class="input-form"></td>
+				<td><input type="text" maxlength="100" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Mã kí hiệu mẫu vật quốc tế:</label></td>
@@ -23,22 +23,22 @@
 
 			<tr>
 				<td><label>Các kí hiệu mẫu vật khác:</label></td>
-				<td><input type="text" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac"  class="input-form" maxlength="100"  required></td>
+				<td><input type="text" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">2. Tên mẫu</h3>
 			<tr>
 				<td><label>Tên Việt Nam(phổ thông) (*):</label></td>
-				<td><input type="text" name="tenVietNam" ng-model="data.tenVietNam"  class="input-form" required></td>
+				<td><input type="text" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tên địa phương:</label></td>
-				<td><input type="text" name="tenDiaPhuong" ng-model="data.tenDiaPhuong"  class="input-form"></td>
+				<td><input type="text" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên Tiếng Anh:</label></td>
-				<td><input type="text" name="tenTiengAnh" ng-model="data.tenTiengAnh"  class="input-form"></td>
+				<td><input type="text" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên theo hệ thống PL của bảo tàng:</label></td>
@@ -50,28 +50,28 @@
 			</tr>
 			<tr>
 				<td><label>Tên khoa học (tên latin): </label></td>
-				<td><input type="text" name="tenKhoaHoc" ng-model="data.tenKhoaHoc" class="input-form"  ></td>
+				<td><input type="text" name="tenKhoaHoc" ng-model="data.tenKhoaHoc" class="input-form" ></td>
 			</tr
 			<tr><td><h4></h4></td></tr>
 			<tr>
 				<td><label>Người định tên: </label></td>
-				<td><input type="text" name="nguoiDinhTen" ng-model="data.nguoiDinhTen" class="input-form"  ></td>
+				<td><input type="text" name="nguoiDinhTen" ng-model="data.nguoiDinhTen" class="input-form" ></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">3. Số lượng và chất lượng mẫu vật</h3>
 			<tr>
 				<td><label>Số lượng mẫu vật:</label></td>
-				<td><input type="number" min="0" name="soLuongMauVat" ng-model="data.soLuongMauVat"  class="input-form"></td>
+				<td><input type="number" min="0" name="soLuongMauVat" ng-model="data.soLuongMauVat" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Số lượng tiêu bản:</label></td>
-				<td><input type="number" min = "0" name="soLuongTieuBan" ng-model="data.soLuongTieuBan"  class="input-form"></td>
+				<td><input type="number" min = "0" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Loại mẫu vật(*):</label></td>
 				<td>
-					<select required name="loaiMau" ng-model="data.loaiMau">
+					<select required class="select-box" name="loaiMau" ng-model="data.loaiMau">
 						<option>Mẫu nghiên cứu</option>
 						<option>Mẫu trưng bày</option>
 						<option>Mẫu type</option>
@@ -80,22 +80,22 @@
 			</tr>
 			<tr>
 				<td><label>Kích thước mẫu (*):</label></td>
-				<td><input type="text" name="kichThuocMau" ng-model="data.kichThuocMau"  class="input-form" required></td>
+				<td><input type="text" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tình trạng mẫu (*):</label></td>
-				<td><input type="text" name="tinhTrangMau" ng-model="data.tinhTrangMau"  class="input-form" required></td>
+				<td><input type="text" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
 			</tr>		
 		</table>
 		<table>
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoiGianThuMau" ng-model="data.thoiGianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
-				<td><input type="text" name="nguoiThuMau" ng-model="data.nguoiThuMau"  class="input-form" required></td>
+				<td><input type="text" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan thu mẫu: </label></td>
@@ -108,7 +108,7 @@
 					<tr>
 						<td>Quốc gia(*): </td>
 						<td>
-							<select class="select-box" ng-model="data.quocGia"  name="quocGia" required>
+							<select class="select-box" ng-model="data.quocGia" name="quocGia" required>
 								<option value="VietNam">Việt Nam</option>
 							</select>
 						</td>
@@ -117,7 +117,7 @@
 						<td>Tỉnh/Thành phố(*): </td>
 						<td>
 							<select class="select-box" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
-								<option  ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " +  city.name}}</option>
+								<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 							</select>
 						</td>
 					</tr>
@@ -132,14 +132,14 @@
 					<tr>
 						<td>Xã(*): </td>
 						<td>
-							<select class="select-box"  ng-model="data.xa" name="xa" required>
+							<select class="select-box" ng-model="data.xa" name="xa" required>
 								<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 							</select>
 						</td>
 					</tr>
 					<tr>
 						<td>Thôn/bản: </td>
-						<td><input type="text"  ng-model="data.thon" name="thon" id="thon" class="input-form"></td>
+						<td><input type="text" ng-model="data.thon" name="thon" id="thon" class="input-form"></td>
 					</tr>
 				</table>
 				</td>
@@ -147,37 +147,37 @@
 			<tr><td><h4>Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</h4></td></tr>
 			<tr>
 				<td><label>Vĩ độ N (*): </label></td>
-				<td><input type="text" name="viDo" ng-model="data.viDo"  class="input-form" required></td>
+				<td><input type="text" name="viDo" ng-model="data.viDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Kinh độ E (*):</label></td>
-				<td><input type="text" name="kinhDo" ng-model="data.kinhDo"  class="input-form" required></td>
+				<td><input type="text" name="kinhDo" ng-model="data.kinhDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
-				<td><input type="text" name="thongTinDuAn" ng-model="data.thongTinDuAn"  class="input-form" required></td>
+				<td><input type="text" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Ghi chép thực địa (*):</label></td>
-				<td><input type="text" name="ghiChepThucDia" ng-model="data.ghiChepThucDia"  class="input-form"  required></td>
+				<td><input type="text" name="ghiChepThucDia" ng-model="data.ghiChepThucDia" class="input-form" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">5. NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
 				<td><label>Thời gian phân tích/giám định/định loại mẫu:</label></td>
-				<td><input type="date" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich"  class="input-form"></td>
+				<td><input type="date" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người phân tích/giám định/định loại mẫu (*):</label></td>
-				<td><input type="text" name="nguoiPhanTich" ng-model="data.nguoiPhanTich"  class="input-form" required></td>
+				<td><input type="text" name="nguoiPhanTich" ng-model="data.nguoiPhanTich" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan/tổ chức phân tích/giám định/phân loại mẫu (*):</label></td>
 				<td><input type="text" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm  (*):</label></td>
+				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
 				<td><input type="file" multiple name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" required></td>
 			</tr>
 			<tr>
@@ -187,15 +187,15 @@
 			</tr>
 			<tr>
 				<td><label>Các kết quả phân tích thành phần vật chất:</label></td>
-				<td><input type="file" name="ketQuaThanhPhanVatChat" ng-model="data.ketQuaThanhPhanVatChat"  class="input-form" accept=".docx, .doc, .pdf" ></td>
+				<td><input type="file" name="ketQuaThanhPhanVatChat" ng-model="data.ketQuaThanhPhanVatChat" class="input-form" accept=".docx, .doc, .pdf" ></td>
 			</tr>
 			<tr>
 				<td><label>Kết quả phân tích đồng vị và định tuổi:</label></td>
-				<td><input type="file" name="ketQuaPhanTichDongVi" ng-model="data.ketQuaPhanTichDongVi"  class="input-form" accept=".docx, .doc, .pdf" ></td>
+				<td><input type="file" name="ketQuaPhanTichDongVi" ng-model="data.ketQuaPhanTichDongVi" class="input-form" accept=".docx, .doc, .pdf" ></td>
 			</tr>
 			<tr>
 				<td><label>Các phân tích khác:</label></td>
-				<td><input type="file" name="phanTichKhac" ng-model="data.phanTichKhac"  class="input-form" accept=".docx, .doc, .pdf" ></td>
+				<td><input type="file" name="phanTichKhac" ng-model="data.phanTichKhac" class="input-form" accept=".docx, .doc, .pdf" ></td>
 			</tr>
 			<tr><td colspan="2"><h2>Nhóm dữ liệu địa chất</h2></td></tr>
 			<tr>
@@ -215,7 +215,7 @@
 			</tr>
 			<tr>
 				<td><label>Hình ảnh mẫu ngoài thực địa:</label></td>
-				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia"  class="input-form"></td>
+				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về phim, video:</label></td>
@@ -302,15 +302,15 @@
 			<h3 class="h3-title">8. NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
 				<td><label>Ngày nhập mẫu: </label></td>
-				<td><input type="date" name="ngayNhapMau" ng-model="data.ngayNhapMau"  class="input-form"></td>
+				<td><input type="date" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người giao mẫu: </label></td>
-				<td><input type="text" name="nguoiGiao" ng-model="data.nguoiGiao"  class="input-form"></td>
+				<td><input type="text" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người nhận mẫu</label></td>
-				<td><input type="text" name="nguoiNhan" ng-model="data.nguoiNhan"  class="input-form"></td>
+				<td><input type="text" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan nhập mẫu: </label></td>
@@ -375,7 +375,7 @@
 			<h3 class="h3-title">9. NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 			<tr>
 				<td><label>Thông tin khác</label></td>
-				<td><input type="text" name="thongTinKhac" ng-model="data.thongTinKhac"  class="input-form"></td>
+				<td><input type="text" name="thongTinKhac" ng-model="data.thongTinKhac" class="input-form"></td>
 			</tr>
 		</table>
 	</form>
