--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -1,20 +1,20 @@
 <div class="container map-detail" style="margin-top: 50px;">
 	<form id="form-content">
 		<input type="text" name="id" style="display: none;" ng-model="data.id">
-		<center><h2>Thêm mẫu dữ liệu thực vật</h2></center>
+		<center><h2>Chinh sua mẫu dữ liệu thực vật</h2></center>
 		<table>
 			<h3 class="h3-title">1. Số hiệu</h3>
 			<tr>
 				<td><label>Số hiệu thực địa (*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form"  required></td>
+				<td><input type="text" maxlength="100" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu bảo tàng cơ sở(*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form"  required></td>
+				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Số hiệu BTTNVN:</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN"  class="input-form"></td>
+				<td><input type="text" maxlength="100" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Mã kí hiệu mẫu vật quốc tế:</label></td>
@@ -23,22 +23,22 @@
 
 			<tr>
 				<td><label>Các kí hiệu mẫu vật khác:</label></td>
-				<td><input type="text" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac"  class="input-form" maxlength="100" required></td>
+				<td><input type="text" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">2. Tên mẫu</h3>
 			<tr>
 				<td><label>Tên Việt Nam (*):</label></td>
-				<td><input type="text" name="tenVietNam" ng-model="data.tenVietNam"  class="input-form" required></td>
+				<td><input type="text" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tên địa phương:</label></td>
-				<td><input type="text" name="tenDiaPhuong" ng-model="data.tenDiaPhuong"  class="input-form"></td>
+				<td><input type="text" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên Tiếng Anh:</label></td>
-				<td><input type="text" name="tenTiengAnh" ng-model="data.tenTiengAnh"  class="input-form"></td>
+				<td><input type="text" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Tên theo hệ thống PL của bảo tàng:</label></td>
@@ -104,27 +104,27 @@
 			</tr>
 			<tr>
 				<td><label>Dưới loài/phân loài: </label></td>
-				<td><input type="text" name="duoiLoai" ng-model="data.duoiLoai" class="input-form"  id="duoiLoai"></td>
+				<td><input type="text" name="duoiLoai" ng-model="data.duoiLoai" class="input-form" id="duoiLoai"></td>
 			</tr>
 			<tr>
 				<td><label>Người định tên: </label></td>
-				<td><input type="text" name="nguoiDinhTen" ng-model="data.nguoiDinhTen" class="input-form"  ></td>
+				<td><input type="text" name="nguoiDinhTen" ng-model="data.nguoiDinhTen" class="input-form" ></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">3. Số lượng và chất lượng mẫu vật</h3>
 			<tr>
 				<td><label>Số lượng mẫu vật:</label></td>
-				<td><input type="number" min="0" name="soLuongMauVat" ng-model="data.soLuongMauVat"  class="input-form"></td>
+				<td><input type="number" min="0" name="soLuongMauVat" ng-model="data.soLuongMauVat" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Số lượng tiêu bản:</label></td>
-				<td><input type="number" min = "0" name="soLuongTieuBan" ng-model="data.soLuongTieuBan"  class="input-form"></td>
+				<td><input type="number" min = "0" name="soLuongTieuBan" ng-model="data.soLuongTieuBan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Loại mẫu vật(*):</label></td>
 				<td>
-					<select required name="loaiMau" ng-model="data.loaiMau">
+					<select required name="loaiMau" class="select-box" ng-model="data.loaiMau">
 						<option>Mẫu nghiên cứu</option>
 						<option>Mẫu trưng bày</option>
 						<option>Mẫu type</option>
@@ -133,22 +133,22 @@
 			</tr>
 			<tr>
 				<td><label>Kích thước mẫu (*):</label></td>
-				<td><input type="text" name="kichThuocMau" ng-model="data.kichThuocMau"  class="input-form" required></td>
+				<td><input type="text" name="kichThuocMau" ng-model="data.kichThuocMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Tình trạng mẫu (*):</label></td>
-				<td><input type="text" name="tinhTrangMau" ng-model="data.tinhTrangMau"  class="input-form" required></td>
+				<td><input type="text" name="tinhTrangMau" ng-model="data.tinhTrangMau" class="input-form" required></td>
 			</tr>		
 		</table>
 		<table>
 			<h3 class="h3-title">4. NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
 				<td><label>Thời gian thu mẫu (*):</label></td>
-				<td><input type="date" name="thoiGianThuMau" ng-model="data.thoiGianThuMau"  class="input-form" required></td>
+				<td><input type="date" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Người thu mẫu (*):</label></td>
-				<td><input type="text" name="nguoiThuMau" ng-model="data.nguoiThuMau"  class="input-form" required></td>
+				<td><input type="text" name="nguoiThuMau" ng-model="data.nguoiThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan thu mẫu: </label></td>
@@ -156,7 +156,7 @@
 			</tr>
 			<tr>
 				<td><label>Phương pháp thu mẫu (*):</label></td>
-				<td><input type="text" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau"  class="input-form" required></td>
+				<td><input type="text" name="phuongPhapThuMau" ng-model="data.phuongPhapThuMau" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Địa điểm thu mẫu: </label></td>
@@ -165,7 +165,7 @@
 					<tr>
 						<td>Quốc gia(*): </td>
 						<td>
-							<select class="select-box" ng-model="data.quocGia"  name="quocGia" required>
+							<select class="select-box" ng-model="data.quocGia" name="quocGia" required>
 								<option value="VietNam">Việt Nam</option>
 							</select>
 						</td>
@@ -174,7 +174,7 @@
 						<td>Tỉnh/Thành phố(*): </td>
 						<td>
 							<select class="select-box" name="tinh" required ng-model= "$parent.data.tinh" ng-change="cityChange()">
-								<option  ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " +  city.name}}</option>
+								<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
 							</select>
 						</td>
 					</tr>
@@ -189,14 +189,14 @@
 					<tr>
 						<td>Xã(*): </td>
 						<td>
-							<select class="select-box"  ng-model="data.xa" name="xa" required>
+							<select class="select-box" ng-model="data.xa" name="xa" required>
 								<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
 							</select>
 						</td>
 					</tr>
 					<tr>
 						<td>Thôn/Xóm: </td>
-						<td><input type="text"  ng-model="data.thon" name="thon" id="thon" class="input-form"></td>
+						<td><input type="text" ng-model="data.thon" name="thon" id="thon" class="input-form"></td>
 					</tr>
 				</table>
 				</td>
@@ -204,67 +204,67 @@
 			<tr><td><h4>Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</h4></td></tr>
 			<tr>
 				<td><label>Vĩ độ N (*): </label></td>
-				<td><input type="text" name="viDo" ng-model="data.viDo"  class="input-form" required></td>
+				<td><input type="text" name="viDo" ng-model="data.viDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Kinh độ E (*):</label></td>
-				<td><input type="text" name="kinhDo" ng-model="data.kinhDo"  class="input-form" required></td>
+				<td><input type="text" name="kinhDo" ng-model="data.kinhDo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Độ cao (*): </label></td>
-				<td><input type="text" name="doCao" ng-model="data.doCao"  class="input-form" required ></td>
+				<td><input type="text" name="doCao" ng-model="data.doCao" class="input-form" required ></td>
 			</tr>
 			<tr>
 				<td><label>Độ sâu:</label></td>
-				<td><input type="number" name="doSau" ng-model="data.doSau"  class="input-form"></td>
+				<td><input type="number" name="doSau" ng-model="data.doSau" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Vùng biển:</label></td>
-				<td><input type="text" name="vungBien" ng-model="data.vungBien"  class="input-form"></td>
+				<td><input type="text" name="vungBien" ng-model="data.vungBien" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Sinh học/sinh thái:</label></td>
-				<td><input type="text" name="sinhHoc" ng-model="data.sinhHoc"  class="input-form"></td>
+				<td><input type="text" name="sinhHoc" ng-model="data.sinhHoc" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về dự án, đề tài đợt thu nhập mẫu (*):</label></td>
-				<td><input type="text" name="thongTinDuAn" ng-model="data.thongTinDuAn"  class="input-form" required></td>
+				<td><input type="text" name="thongTinDuAn" ng-model="data.thongTinDuAn" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Ghi chép thực địa (*):</label></td>
-				<td><input type="text" name="ghiChepThucDia" ng-model="data.ghiChepThucDia"  class="input-form"  required></td>
+				<td><input type="text" name="ghiChepThucDia" ng-model="data.ghiChepThucDia" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Bản đồ:</label></td>
-				<td><input type="file" name="banDo" ng-model="data.banDo"  class="input-form" required></td>
+				<td><input type="file" name="banDo" ng-model="data.banDo" class="input-form" required></td>
 			</tr>
 		</table>
 		<table>
 			<h3 class="h3-title">5. NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
 				<td><label>Thời gian phân tích/giám định/định loại mẫu:</label></td>
-				<td><input type="date" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich"  class="input-form"></td>
+				<td><input type="date" name="thoiGianPhanTich" ng-model="data.thoiGianPhanTich" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người phân tích/giám định/định loại mẫu (*):</label></td>
-				<td><input type="text" name="nguoiPhanTich" ng-model="data.nguoiPhanTich"  class="input-form" required></td>
+				<td><input type="text" name="nguoiPhanTich" ng-model="data.nguoiPhanTich" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan/tổ chức phân tích/giám định/phân loại mẫu (*):</label></td>
 				<td><input type="text" name="coQuanToChucPhanTich" ng-model="data.coQuanToChucPhanTich" id="coQuanToChucPhanTich" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm  (*):</label></td>
+				<td><label>Tài liệu phân tích/giám định/phân loại đi kèm (*):</label></td>
 				<td><input type="file" multiple name="taiLieuPhanTich" ng-model="data.taiLieuPhanTich" accept=".doc, .docx, .pdf" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>Mô tả/đặc điểm hình thái  (*)</label></td>
+				<td><label>Mô tả/đặc điểm hình thái (*)</label></td>
 				<td><input type="text" name="moTaHinhThaiStr" ng-model="data.moTaHinhThaiStr" class="input-form">
 				<input type="file" multiple accept="video/mp4,video/x-m4v,video/*" name="moTaHinhThaiFile" ng-model="data.moTaHinhThaiFile" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Hình vẽ:</label></td>
-				<td><input type="file" name="hinhVe" ng-model="data.hinhVe"  class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf" ></td>
+				<td><input type="file" name="hinhVe" ng-model="data.hinhVe" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf" ></td>
 			</tr>
 		</table>
 		<table>
@@ -275,7 +275,7 @@
 			</tr>
 			<tr>
 				<td><label>Hình ảnh mẫu ngoài thực địa:</label></td>
-				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia"  class="input-form"></td>
+				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Thông tin về phim, video:</label></td>
@@ -352,7 +352,7 @@
 		<table>
 			<h3 class="h3-title">7. NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 			<tr>
-				<td colspan="2"><h4>Phân bố địa lý của taxon định loại  (*)</h4></td>
+				<td colspan="2"><h4>Phân bố địa lý của taxon định loại (*)</h4></td>
 			</tr>
 			<tr>
 				<td><label>Phân bố Việt Nam (*):</label></td>
@@ -378,15 +378,15 @@
 			<h3 class="h3-title">8. NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
 				<td><label>Ngày nhập mẫu: </label></td>
-				<td><input type="date" name="ngayNhapMau" ng-model="data.ngayNhapMau"  class="input-form"></td>
+				<td><input type="date" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người giao mẫu: </label></td>
-				<td><input type="text" name="nguoiGiao" ng-model="data.nguoiGiao"  class="input-form"></td>
+				<td><input type="text" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Người nhận mẫu</label></td>
-				<td><input type="text" name="nguoiNhan" ng-model="data.nguoiNhan"  class="input-form"></td>
+				<td><input type="text" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 			</tr>
 			<tr>
 				<td><label>Cơ quan nhập mẫu: </label></td>
@@ -451,7 +451,7 @@
 			<h3 class="h3-title">9. NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 			<tr>
 				<td><label>Thông tin khác</label></td>
-				<td><input type="text" name="thongTinKhac" ng-model="data.thongTinKhac"  class="input-form"></td>
+				<td><input type="text" name="thongTinKhac" ng-model="data.thongTinKhac" class="input-form"></td>
 			</tr>
 		</table>
 	</form>
