--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -7,13 +7,13 @@
 			<table>
 				<tr>
 					<td>
-						<p><b>Id: </b><a style="text-decoration: none" href="/content/dong-vat/{{post._id}}?display=html"><span class="label label-info">{{post._id}}</span></a></p>
+						<p><b>Id: </b><a style="text-decoration: none" href="/content/{{link}}/{{post._id}}?display=html"><span class="label label-info">{{post._id}}</span></a></p>
 						<p><b>Người thu mẫu: </b>{{post.duLieuThuMau.nguoiThuMau}}</p>
 						<p><b>Tên mẫu: </b>{{post.tenMau.tenVietNam}}</p>
 						<p><b>Ngày đăng: </b>{{post.created_at | date: "dd-MM-yyyy hh:mm:ss"}}</p>
 					</td>
 					<td style="right: 0px; position: absolute;">
-						<a class="btn btn-success" href="#!/dong-vat/chinh-sua/{{post._id}}" role="button"><span class="glyphicon glyphicon-pencil"></span>Chỉnh sửa</a>
+						<a class="btn btn-success" href="#!/{{link}}/chinh-sua/{{post._id}}" role="button"><span class="glyphicon glyphicon-pencil"></span>Chỉnh sửa</a>
 						<a class="btn btn-danger" ng-click="deletePost(post._id)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa bài đăng</a>
 					</td>
 				</tr>
